@@ -1,6 +1,8 @@
 DIST ikiwiki_3.20091023.tar.gz 1486940 RMD160 bdba28770a95af4cb72e49b6d435ee43eff6b03a SHA1 b97e2b1c3ec776d3f47189bf630a0745a56d3508 SHA256 35f302350e1f03a32ea78f1bbafb85c76a77b8b04cf1950ed0b75547559270b7
 DIST ikiwiki_3.20091113.tar.gz 1474045 RMD160 a2550867fe2aa6588fce0ab0190190ad51bba7ef SHA1 daaef9d99fa6504bf3b54dac73d62dd73122b1e8 SHA256 136bdfd16ff9aabfcdc7c85135b28d3244fa87026f917771013bac9eeb38632a
+DIST ikiwiki_3.20100102.3.tar.gz 1521445 RMD160 951b63bf1657ed27b83c3b78f26ff6977aa419ba SHA1 fe3ecc98faaae8dbe23346612d70848de5f64bca SHA256 575b34d85ba5cfae79b98ba3d420a188f17f3dca709b2441e3d12c0ecf27656d
 EBUILD ikiwiki-3.20091023.ebuild 1113 RMD160 71c905b5ba8d9e2dc378db97ccb30d44728e30e3 SHA1 b128a225b478fb64497f9bf029e2c90753929756 SHA256 271cfb655bca7f1586e7cd4dcc6135ac177c7aabe504007457ec3c4281b5b755
 EBUILD ikiwiki-3.20091113.ebuild 1113 RMD160 71c905b5ba8d9e2dc378db97ccb30d44728e30e3 SHA1 b128a225b478fb64497f9bf029e2c90753929756 SHA256 271cfb655bca7f1586e7cd4dcc6135ac177c7aabe504007457ec3c4281b5b755
-MISC ChangeLog 560 RMD160 bb0075f1216ededd4ab464fc93c7f9853bdb774d SHA1 9f1147dad859e86222a8ef8eb820fdfc5a4f1ea2 SHA256 b5059546a7e3de77ce5a3e39f1d993e4f697e7361f0611329d4ce9cae1d7e8eb
+EBUILD ikiwiki-3.20100102.3.ebuild 1070 RMD160 b1815beae57673605fbbdf5d6076356b26b55193 SHA1 a85f20291efdf20e702891e8cca51d124dbc99a9 SHA256 03e56f0f543bb4ac2b65400d350a8b63fdd44d9544f7e3d9172c1af050876b1e
+MISC ChangeLog 661 RMD160 4cfdf296a3cc1c56664360c47c0f83c63ae27224 SHA1 6d1ec7bedf92764e4308cb3b375e5dcec8d9729b SHA256 96d1fda9d73a90349874fd8371ec5f58063347b003d9cd07d3a7daafaa923234
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
