@@ -1,7 +1,11 @@
 # ChangeLog for www-apps/ikiwiki
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # ChangeLog: rion overlay ;http://code.google.com/p/rion-overlay/ 
 # $Header: $
+
+  13 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  +ikiwiki-3.20100102.3.ebuild:
+  version bump
 
   09 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
   +ikiwiki-3.20091113.ebuild:
